--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,8 +10,8 @@ hero:
     - text: Setup Guide
       link: /home/home/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Join our Discord
+      link: https://discord.gg/9kJjqcsH7B
       icon: external
       variant: minimal
 ---
