--- a/src/content/docs/start.mdx
+++ b/src/content/docs/start.mdx
@@ -1,3 +1,8 @@
+---
+title: Start
+---
+
+
 <Card title="Add new content" icon="add-document">
 		Add Markdown or MDX files to `src/content/docs` to create new pages.
 	</Card>
