--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: PocketCloud Wiki
-description: Get started building your docs site with Starlight.
+description: Get started building your Minecraft Bedrock Network with PocketCloud
 template: splash
 hero:
   tagline: Welcome to our Wiki made with Love :D
